# syft-proto

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  SwiftSyft.podspec  SyftProto.podspec  build_stubs.sh  package-lock.json  package.json  proto.json  protoc  settings.gradle  setup.cfg  setup.py
.github/workflows/: js-stubs.yml  publish.yml  stubs-and-publish.yml  stubs.yml  swift-stubs.yml  test.tml
helpers/: update_types.py
js/: index.js  protobuf.d.js  protobuf.js
jvm/: build.gradle  publish.gradle
protobuf/syft_proto/common/: uid.proto
protobuf/syft_proto/generic/: string.proto
pysyft/federated/v1/: train_config.proto
pysyft/generic/v1/: tensor.proto
pysyft/messages/v1/: force_object_delete_message.proto  get_shape_message.proto  is_none_message.proto  object_message.proto  object_request_message.proto  operation_message.proto  plan_command_message.proto  search_message.proto
pysyft/messaging/v1/: message.proto  protocol.proto
pysyft/workers/v1/: worker.proto
pysyft_proto/: __init__.py  proto.py
pysyft_proto/federated/v1/: train_config_pb2.py
pysyft_proto/generic/v1/: tensor_pb2.py
pysyft_proto/messaging/v1/: message_pb2.py  protocol_pb2.py
pysyft_proto/workers/v1/: worker_pb2.py
swift/: syft_proto_execution_v1_plan.pb.swift
swift/syft_proto/common/: uid.pb.swift
swift/syft_proto/generic/: string.pb.swift
syft_proto/: __init__.py  _version.py  proto.json  proto.py
syft_proto/common/: uid_pb2.py
syft_proto/core/message/: custom_message_pb2.py  delete_message_pb2.py  (+5 more)
syft_proto/generic/: string_pb2.py
(+379 files in other folders)
