[metadata]
name=syft_proto
author=OpenMined
license=Apache-2.0
author_email=contact@openmined.org
home-page=https://github.com/OpenMined/syft-proto
description-file=README.md
long-description-content-type = text/markdown; charset=UTF-8
summary=Serialization constants for PySyft data types

classifier =
    Development Status :: 3 - Alpha
keywords=
    deep
    learning
    artificial
    intelligence
    homomorphic
    encryption

[files]
packages=syft_proto

[aliases]
test=pytest

[bdist_wheel]
universal=0

[versioneer]
VCS = git
style = pep440-old
versionfile_source = syft_proto/_version.py
versionfile_build = syft_proto/_version.py
tag_prefix =
parentdir_prefix = 
